Solved movement in "X" - seemed overflow of "About" element in Navbar and use of "VW" (view-width) contributed. Small CSS changes for small screen width. Implemented blur for search location after entry so virtual keypad in mobile drops.

--- a/src/App.css
+++ b/src/App.css
@@ -5,5 +5,5 @@
 }
 
 .main__app{
-  width: 100vw;
+  width: 100%;
 }
