--- a/src/Home.css
+++ b/src/Home.css
@@ -2,27 +2,35 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    width: 100%;
     position: relative;
     color: black;
-    background: #ffc000;
 }
 
 .nav-bar{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 50px;
     width: 100%;
+    height: 50px;
     background: #ffc000;
     position: sticky;
-    position: -webkit-sticky;
     top: 0px;
 }
 
 #nav-bar__title, #nav-bar__about{
     font-weight: 900;
-    padding-left: 30px;
-    padding-right: 30px;
+}
+
+#nav-bar__title {
+    width: min-content;
+    margin-left: 30px;
+    margin-right: 15px;
+}
+
+#nav-bar__about {
+    margin-right: 30px;
+    margin-left: 15px;
 }
 
 #nav-bar__search-container {
@@ -37,7 +45,6 @@
 #nav-bar__search {
     font-size: 16px;
     width: 144px;
-    background: transparent;
     border: 0;
     outline: none;
     flex: 1;
@@ -48,24 +55,24 @@
 }
 
 #clear__button{
-    margin-right: 4px;
+    margin-right: 5px;
+    margin-left: 5px;
 }
 
 #clear__button-inactive{
-    display:none;
+    display: none;
 }
 
 .home__content-container{
     display: flex;
     flex-direction: column;
-    min-height: calc(100vh - 100px);
-    padding-bottom: 50px;
+    flex: 1;
+    width: 100%;
+    padding: 50px 10% 100px 10%;
     background-color: white;
 }
 
 .home__content-cards{
-    margin: auto auto;
-    width: 80%;
     text-align: center;
     display:grid;
     grid-template-columns: repeat(auto-fit, minmax(250px , 1fr));
@@ -82,4 +89,17 @@
     background: #ffc000;
     font-size: 16px;
     font-weight: 900;
+}
+
+@media only screen and (max-width: 450px) {
+
+    #nav-bar__title {
+        margin-left: 10px;
+        margin-right: 5px;
+    }
+    
+    #nav-bar__about {
+        margin-right: 10px;
+        margin-left: 5px;
+    }  
 }
